# fofdata

./: Cargo.toml  ignore.conf
src/: fof9_leaguedata.rs  fof9_playerdata.rs  fof9_utility.rs  fof9_weekdata.rs  lib.rs
tests/: load_league.rs  load_players.rs  load_week.rs
tests/common/: mod.rs
